--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<HTML>
-<H> 
-</H>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sample page</title>
+</head>
 <body>
-<p> Hello world </p>
+    Testing if this works
 </body>
+</html>
