--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Sample page</title>
 </head>
 <body>
-    Testing if this works
+    <a href="/Alpha/Interfaccia1.html" if this works </a>
 </body>
 </html>
