--- a/Alpha/Interfaccia1.html
+++ b/Alpha/Interfaccia1.html
@@ -2,6 +2,9 @@
 <link rel="stylesheet" href="Stily.css">
 <link rel="icon" type="image/x-icon" href="https://repository-images.githubusercontent.com/567899673/f254b780-9113-4493-903c-4b1ab482e5ae">
 <head>
+	<script src="javascriptCode.js">
+		
+	</script>
 <title> Alpha Interface
 </title>
 </head>
@@ -14,7 +17,7 @@
 </div>
 
 <div class="main">
-	<iframe class="mainAcc" src="https://www.w3schools.com/html/"> </iframe>
+	<iframe class="mainAcc" src="https://www.battlemageserotica.com/"> </iframe>
 </div>
 
 <div class="sec">
