--- a/Alpha/Alpha/Interfaccia1.html
+++ b/Alpha/Alpha/Interfaccia1.html
@@ -24,21 +24,45 @@
 		<button class="navButton"> ORDER </button>
 	</div>
 </div>
-<div ID="mainDiv">
-	<div class="main" ID=0>
-		<iframe class="mainAcc" src="https://www.battlemageserotica.com/"> </iframe>
-		<button> Switch </b>
-	</div>
+<div class="main" ID=0>
+	<iframe class="mainAcc" src="https://www.battlemageserotica.com/"> </iframe>
+	<button> Switch </b>
+</div>
 
-	<div class="sec" ID=1>
-		<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
-		<button> Switch </b>
-	</div>
+<div class="sec" ID=1>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
 
-	<div class="sec" ID=2>
-		<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
-		<button> Switch </b>
-	</div>
+<div class="sec" ID=2>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=3>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=4>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=5>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=6>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=7>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
 
 </body>
 <script>
@@ -52,6 +76,7 @@
 			divList.shift();
 		}
 	};
+	order();
 	divList.forEach((item) => {
 		item.addEventListener("click", controlledSwitch);
 		console.log(item);
