--- a/Alpha/Alpha/Interfaccia1.html
+++ b/Alpha/Alpha/Interfaccia1.html
@@ -18,10 +18,10 @@
 		<button class="navButton" onclick="switchi()"> SWITCH </button>
 	</div>
 	<div class="navBarElement"> 
-		<button class="navButton" onclick="set()"> SET </button>
+		<button class="navButton" onclick="switchi()"> SET </button>
 	</div>
 	<div class="navBarElement"> 
-		<button class="navButton"> ORDER </button>
+		<button class="navButton" onclick="switchi()"> ORDER </button>
 	</div>
 </div>
 <div class="main" ID=0>
@@ -60,6 +60,46 @@
 </div>
 
 <div class="sec" ID=7>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="main" ID=8>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/"> </iframe>
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=9>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=10>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=11>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=12>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=13>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=14>
+	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<button> Switch </b>
+</div>
+
+<div class="sec" ID=15>
 	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
