--- a/AlphaAbsolute/Interfaccia1.html
+++ b/AlphaAbsolute/Interfaccia1.html
@@ -64,7 +64,7 @@
 	<button> Switch </b>
 </div>
 
-<div class="main" ID=8>
+<div class="sec" ID=8>
 	<iframe class="secAcc" src="https://www.battlemageserotica.com/"> </iframe>
 	<button> Switch </b>
 </div>
