--- a/AlphaAbsolute/Interfaccia1.html
+++ b/AlphaAbsolute/Interfaccia1.html
@@ -25,72 +25,72 @@
 	</div>
 </div>
 <div class="main" ID=0>
-	<iframe class="mainAcc" src="https://www.battlemageserotica.com/"> </iframe>
+	<iframe sandbox="allow-same-origin" class="mainAcc" src="https://www.battlemageserotica.com/"> </iframe>
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=1>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=2>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=3>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=4>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=5>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=6>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=7>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=8>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/"> </iframe>
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/"> </iframe>
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=9>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=10>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=11>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=12>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=13>
-	<iframe class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
