--- a/AlphaAbsolute/Interfaccia1.html
+++ b/AlphaAbsolute/Interfaccia1.html
@@ -50,7 +50,7 @@
 </div>
 
 <div class="sec" ID=5>
-	<iframe sandbox class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
