Indicization and side menu

--- a/AlphaAbsolute/Interfaccia1.html
+++ b/AlphaAbsolute/Interfaccia1.html
@@ -15,82 +15,88 @@
 <body>
 <div id="navBar">
 	<div class="navBarElement"> 
-		<button class="navButton" onclick="switchi()"> SWITCH </button>
+		<button class="navButton" onclick="SetToFirst()"> SET TO FIRST </button>
 	</div>
 	<div class="navBarElement"> 
 		<button class="navButton" onclick="switchi()"> SET </button>
 	</div>
 	<div class="navBarElement"> 
-		<button class="navButton" onclick="switchi()"> ORDER </button>
+		<button class="navButton" onclick="switchi()"> SWITCH </button>
+	</div>
+</div>
+
+<div id="sideBar">
+	<div class="sideBarElement">
+		<input id="indicization" class="sideInput"> </input>
 	</div>
 </div>
 <div class="main" ID=0>
-	<iframe sandbox="allow-same-origin" class="mainAcc" src="https://www.battlemageserotica.com/"> </iframe>
+	<iframe class="mainAcc" src="https://battlemageserotica.com/"> </iframe>
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=1>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=2>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=3>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=4>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=5>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe  class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=6>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe  class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=7>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe  class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=8>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/"> </iframe>
+	<iframe  class="secAcc" src="https://battlemageserotica.com/"> </iframe>
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=9>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe  class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=10>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe  class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=11>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe  class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=12>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe  class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
 <div class="sec" ID=13>
-	<iframe sandbox="allow-same-origin" class="secAcc" src="https://www.battlemageserotica.com/">  </iframe> 
+	<iframe  class="secAcc" src="https://battlemageserotica.com/">  </iframe> 
 	<button> Switch </b>
 </div>
 
@@ -110,8 +116,12 @@
 	divList.forEach((item) => {
 		item.addEventListener("click", controlledSwitch);
 	});
-		
-
+	document.addEventListener("keydown", (event) => {
+		let x = event.key;
+		console.log(x);
+		keyCheck(x);
+	});
+	console.log(document);
 	console.log(divList); // Array of div elements
 </script>
 <!--
