--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample page</title>
-</head>
-<body>
-    <a href="FranDarkashe/AlphaAbsolute/Interfaccia1.html"> if this works </a>
-</body>
+    <link rel="stylesheet" href="/Css_styles/style1.css"
+
+    <head>
+
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sample page</title>
+
+    </head>
+
+    <body>
+
+        <a href="FranDarkashe/AlphaAbsolute/Interfaccia1.html"> if this works </a>
+
+    </body>
 </html>
