--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="/Css_styles/style1.css"
+    <link rel="stylesheet" href="FranDarkashe/Css_styles/style1.css"
 
     <head>
 
