--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="FranDarkashe/CssStyles/style1.css"
+    <link rel="stylesheet" href="CssStyles/style1.css"
 
     <head>
 
@@ -11,8 +11,19 @@
     </head>
 
     <body>
-
-        <a href="FranDarkashe/AlphaAbsolute/Interfaccia1.html"> if this works </a>
+        <div class="main">
+            <div class="text">
+                Are you 18+ years old?
+            </div>
+                
+            <div class="yes">
+                Yes
+            </div>
+                
+            <div class="no">
+                No
+            </div>
+        </div>
 
     </body>
 </html>
